--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://projects.cosmick9.net",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "pug": "^3.0.2"
   },
